# youtube-automation

./: .gitignore  .pre-commit-config.yaml  CAPABILITY_REPORT.md  CHANGELOG.md  CLAUDE.md  CLEANUP_REPORT.md  DEAD_CODE_TRIAGE.md  FIX_INTEGRATIONS.md  FREE_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  INTEGRATION_TEST_SUMMARY.txt  Makefile  OPTIMIZATION_SUMMARY.md  PLUGINS.md  REFACTORING_SUMMARY.md  SETUP_AUTO_START.md  TEST_REPORT.md  TEST_REPORT_PHASE4.md  VERIFICATION.txt  VERIFICATION_COMPLETE.txt  VERIFICATION_INDEX.md  conftest.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-optimized.txt  requirements.txt  run.py  start_scheduler.bat  start_scheduler_hidden.vbs  test_async_features.py  test_hybrid_short.py  test_imports.py  test_pika.py  test_pika_video.py  upload_to_channel.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  daily-health.yml
api/: __init__.py  job_tracker.py  models.py  server.py
assets/music/: README.md
assets/templates/: templates.json
config/: .env.example  ai_video.yaml  channels.yaml  channels_config.json  config.example.yaml  config.yaml  distribution.yaml  integrations.yaml  openclaw_config.json  performance.yaml  platforms.yaml  seo_templates.yaml  subreddits.yaml  viralflow_config.json
data/: youtube_automation.db
docs/: AGENTS.md  APP_OVERVIEW.md  BATCH_4_TEST_COVERAGE_PROGRESS.md  CODEBASE_EXPLANATION.md  COMPETITOR_ANALYSIS.md  CREATE_NEW_GOOGLE_PROJECT.md  FINAL_SESSION_REPORT.md  GROWTH_ROADMAP.md  NEW_FEATURES.md  OPENCLAW_INTEGRATION.md  OPTIMIZATION_REPORT.md  PERFORMANCE_OPTIMIZATION.md  PLATFORM_SETUP.md  QUALITY_SCORECARD.md  QUICK_OPTIMIZATION_GUIDE.md  QUICK_START.md  RESEARCH_REPORTS.md  VIRALFLOW_INTEGRATION.md  YOUTUBE_OAUTH_FIX.md
scripts/: agent_task_1_prompt_compression.md  agent_task_2_memory_leaks_ultra.md  agent_task_3_memory_leaks_pro.md  agent_task_4_single_pass_ffmpeg.md  benchmark_performance.py  download_music_helper.py  setup_new_features.py
src/: __init__.py  exceptions.py  main.py
src/agents/: __init__.py  (+29 more)
test_scripts/: problematic_script.txt
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_core_modules.py  test_database_compliance.py  test_imports.py  test_integration_basic.py  test_new_modules.py  test_pipeline_integration.py  test_rebranding_compliance.py  test_smoke_cli.py  test_video_assembler.py
(+196 files in other folders)
